--- a/client/CMakeLists.txt
+++ b/client/CMakeLists.txt
@@ -1,4 +1,6 @@
 cmake_minimum_required(VERSION 3.5)
 project(WIMP-Client)
 
+set(CLIENT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
+
 add_subdirectory(src)
