--- a/wimp/src/CMakeLists.txt
+++ b/wimp/src/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.5)
 
-set(WIMP_SOURCE_FILES socket.c socket.h)
+set(WIMP_SOURCE_FILES uni_socket.c uni_socket.h)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 
 add_library(${PROJECT_NAME} STATIC ${WIMP_SOURCE_FILES})
