--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -3,5 +3,6 @@ project(WIMP-Test)
 
 add_subdirectory(utility)
 add_subdirectory(1_SEND_RECIEVE_LOOP)
+add_subdirectory(2_INSTRUCTION_BRUTE_FORCE_TIME)
 
 set(TEST_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
