--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -5,5 +5,6 @@ add_subdirectory(utility)
 add_subdirectory(1_SEND_RECIEVE_LOOP)
 add_subdirectory(2_INSTRUCTION_BRUTE_FORCE_TIME)
 add_subdirectory(3_MASTER_CHILD_ROUTING)
+add_subdirectory(4_SEPARATE_EXECUTABLE_LOOP)
 
 set(TEST_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
