Added support for any length messages

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -7,5 +7,6 @@ add_subdirectory(2_INSTRUCTION_BRUTE_FORCE_TIME)
 add_subdirectory(3_MASTER_CHILD_ROUTING)
 add_subdirectory(4_SEPARATE_EXECUTABLE_LOOP)
 add_subdirectory(5_SHARED_DATA_SPACE)
+add_subdirectory(6_LONG_STRINGS)
 
 set(TEST_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
